--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,6 +9,10 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 
+# Explicitly set the dialect and driver to prevent startup errors
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 # Security: REQUIRED environment variables
 # Deployment will FAIL if these are not set in the hosting provider dashboard.
 jwt.secretKey=${JWT_SECRET}
