--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,21 +1,19 @@
 # Database Configuration for Production
-# In production, we do NOT provide default values here. 
-# They MUST be provided via environment variables (DB_URL, DB_USERNAME, DB_PASSWORD).
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
-# Hibernate: Validate schema instead of updating it
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
-
-# Explicitly set the platform and bypass metadata to unmask connection errors
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# Give Supabase more time to accept connections (60 seconds)
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.initialization-fail-timeout=-1
+
+# Let Hibernate update the schema (safe for first deploy)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Security: REQUIRED environment variables
-# Deployment will FAIL if these are not set in the hosting provider dashboard.
 jwt.secretKey=${JWT_SECRET}
 frontend.url=${FRONTEND_URL}
 stripe.secret.key=${STRIPE_SECRET_KEY}
@@ -26,6 +24,6 @@ spring.jpa.open-in-view=false
 server.error.include-stacktrace=never
 spring.main.banner-mode=off
 
-# Access Swagger UI in Production (Optional, remove if you want it private)
+# Swagger UI
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
